# pegtl-tests

./: .gitignore  CMakeLists.txt  clone_pegtl  pegtl_run
actions/: chatgpt.cpp  multirules.cpp
inputs/: ini_sample1.txt
src/: example1.cpp  ini.cpp  json.cpp  list_of_numbers.cpp  multirules.cpp
utility/: pegtl_build
